added footer contents

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                             <div class="card-square-img mb-20">
                                 <img src="img/designit.svg" alt="designit-grey">
                             </div>
-                            <div class="border-empty mb-20"></div>
+                            <div class="border-empty-square mb-20"></div>
                             <p class="p-little paragraph-square mb-20">I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
                             <div class="p-little">Morten Thomsen, Global IT Lead</div>
                         </div>
@@ -359,18 +359,20 @@
         <!-- Section FAQ -->
         <section class="section-dimension-general">
             <div class="small-container section-faq">
-                <div class="section-title section-faq-title"></div>
-                <div class="usual-faq">
-                    <p>ciao</p>
-                    <i class="fa-solid fa-angle-down"></i>
+                <div class="section-title section-faq-title">
+                    <h3>Domande frequenti</h3>
                 </div>
-                <div class="usual-faq">
-                    <p>ciao</p>
-                    <i class="fa-solid fa-angle-down"></i>
+                <div class="usual-faq usual-faq-first">
+                    <p class="p-little"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
+                    <i class="fa-solid fa-angle-down fa-xs"></i>
                 </div>
-                <div class="usual-faq">
-                    <p>ciao</p>
-                    <i class="fa-solid fa-angle-down"></i>
+                <div class="usual-faq usual-faq-first">
+                    <p class="p-little"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
+                    <i class="fa-solid fa-angle-down fa-xs"></i>
+                </div>
+                <div class="usual-faq usual-faq-first">
+                    <p class="p-little"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
+                    <i class="fa-solid fa-angle-down fa-xs"></i>
                 </div>
             </div>
         </section>
@@ -380,18 +382,57 @@
     <footer>
         <div class="large-container">
             <div class="footer-content">
-                <div class="footer-top">
-                    <ul></ul>
-                    <ul></ul>
-                    <ul></ul>
-                    <ul></ul>
-                    <ul></ul>
+                <div class="footer-top mb-40">
+                    <ul>
+                        <li>Dropbox</li>
+                        <li>Applicazioni desktop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                    <ul>
+                        <li>Prodotti</li>
+                        <li>Applicazioni desktop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                    <ul>
+                        <li>Azienda</li>
+                        <li>Applicazioni desktop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                    <ul>
+                        <li>Supporto</li>
+                        <li>Applicazioni desktop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                    <ul>
+                        <li>Community</li>
+                        <li>Applicazioni desktop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div class="footer-splitter mb-20">
+                    <div class="border-empty-footer"></div>
                 </div>
                 <div class="footer-bottom">
-                    <div class="footer-bottom-content">
-                        <i class="fa-solid fa-earth-americas"></i>
-                        <span class="language">Italiano</span>
-                        <span>&blacktriangle;</span>
+                        <div class="footer-bottom-content">
+                            <i class="fa-solid fa-earth-americas"></i>
+                            <span class="language">Italiano</span>
+                            <span>&blacktriangle;</span>
+                        </div>
                     </div>
                 </div>
             </div>
