--- a/index.html
+++ b/index.html
@@ -380,60 +380,57 @@
 
     <!-- Footer -->
     <footer>
-        <div class="large-container">
-            <div class="footer-content">
-                <div class="footer-top mb-40">
-                    <ul>
-                        <li>Dropbox</li>
-                        <li>Applicazioni desktop</li>
-                        <li>Perché Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
-                    </ul>
-                    <ul>
-                        <li>Prodotti</li>
-                        <li>Applicazioni desktop</li>
-                        <li>Perché Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
-                    </ul>
-                    <ul>
-                        <li>Azienda</li>
-                        <li>Applicazioni desktop</li>
-                        <li>Perché Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
-                    </ul>
-                    <ul>
-                        <li>Supporto</li>
-                        <li>Applicazioni desktop</li>
-                        <li>Perché Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
-                    </ul>
-                    <ul>
-                        <li>Community</li>
-                        <li>Applicazioni desktop</li>
-                        <li>Perché Dropbox</li>
-                        <li>Piani</li>
-                        <li>Sicurezza</li>
-                        <li>Funzioni</li>
-                    </ul>
-                </div>
-                <div class="footer-splitter mb-20">
-                    <div class="border-empty-footer"></div>
-                </div>
-                <div class="footer-bottom">
-                        <div class="footer-bottom-content">
-                            <i class="fa-solid fa-earth-americas"></i>
-                            <span class="language">Italiano</span>
-                            <span>&blacktriangle;</span>
-                        </div>
-                    </div>
+        <div class="footer-content large-container">
+            <div class="footer-top mb-40">
+                <ul>
+                    <li>Dropbox</li>
+                    <li>Applicazioni desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+                <ul>
+                    <li>Prodotti</li>
+                    <li>Applicazioni desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+                <ul>
+                    <li>Azienda</li>
+                    <li>Applicazioni desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+                <ul>
+                    <li>Supporto</li>
+                    <li>Applicazioni desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+                <ul>
+                    <li>Community</li>
+                    <li>Applicazioni desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div class="footer-splitter mb-20">
+                <div class="border-empty-footer"></div>
+            </div>
+            <div class="footer-bottom">
+                <div class="footer-bottom-content">
+                    <i class="fa-solid fa-earth-americas"></i>
+                    <span class="language">Italiano</span>
+                    <span>&blacktriangle;</span>
                 </div>
             </div>
         </div>
