added button hover effects

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <p class="mb-20">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente. </p>
                         <button class="button button-blue mb-20">Inizia la tua prova gratuita</button>
                         <p class="mb-40">Annulla in qualsiasi momento</p>
-                        <i class="fa-solid fa-arrow-down fa-2x"></i>
+                        <a class="a-special" href="footer"><i class="fa-solid fa-arrow-down fa-3x"></i></a>
                     </div>
                     <div class="jumbotron-content-image">
                         <img src="img/jumbo.png" alt="immagine jumbotron">
@@ -366,11 +366,11 @@
                     <p class="p-little"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
                     <i class="fa-solid fa-angle-down fa-xs"></i>
                 </div>
-                <div class="usual-faq usual-faq-first">
+                <div class="usual-faq">
                     <p class="p-little"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
                     <i class="fa-solid fa-angle-down fa-xs"></i>
                 </div>
-                <div class="usual-faq usual-faq-first">
+                <div class="usual-faq">
                     <p class="p-little"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
                     <i class="fa-solid fa-angle-down fa-xs"></i>
                 </div>
