small corrections to all

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <p class="mb-20">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente. </p>
                         <button class="button button-blue mb-20">Inizia la tua prova gratuita</button>
                         <p class="mb-40">Annulla in qualsiasi momento</p>
-                        <a class="a-special" href="footer"><i class="fa-solid fa-arrow-down fa-3x"></i></a>
+                        <a href="#footer-go" class="a-special"><i class="fa-solid fa-arrow-down fa-3x"></i></a>
                     </div>
                     <div class="jumbotron-content-image">
                         <img src="img/jumbo.png" alt="immagine jumbotron">
@@ -94,23 +94,38 @@
                             </ul>
                         </div>
                         <div class="customer-plan-features mb-20 pl-20">
-                            <ul>
-                                <li class="mb-10"><i class="fa-solid fa-user"></i> 1 utente</li>
-                                <li class="mb-10"><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</li>
-                                <li><i class="fa-solid fa-circle-nodes"></i> Funzioni di produttività premium e condivisione file semplice e sicura</li>  
+                            <ul class="icon-list">
+                                <li class="mb-10">
+                                    <span><i class="fa-solid fa-user"></i></span>
+                                    <span>1 utente</span>
+                                </li>
+                                <li class="mb-10">
+                                    <span><i class="fa-solid fa-folder"></i></span> 
+                                    <span>5 TB di spazio di archiviazione sicuro</span>
+                                </li>
+                                <li>
+                                    <span><i class="fa-solid fa-circle-nodes"></i></span>
+                                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                                </li>  
                             </ul>
                         </div>
                         <div class="customer-plan-test">
-                            <button class="button-blue button-special mb-10"> Prova gratis per 30 giorni </button>
+                            <button class="button-blue button-col-85 mb-10"> Prova gratis per 30 giorni </button>
                         </div>
                         <div class="customer-plan-buynow pl-20 mb-50">
                             <span class="border-special">oppure</span> <a href="#">acquista ora</a>
                         </div>
                         <div class="customer-plan-highlights pl-20">
                             <h5 class="mb-10">Punti Salienti del piano</h5>
-                            <ul>
-                                <li><i class="fa-solid fa-check"></i> Invia file fino a 100GB con Dropbox Transfert</li>
-                                <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                            <ul class="icon-list">
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Invia file fino a 100GB con Dropbox Transfert</span>  
+                                </li>
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Cartelle offline su dispositivi mobili</span>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -124,27 +139,51 @@
                             </ul>
                         </div>
                         <div class="customer-plan-features mb-20 pl-20">
-                            <ul>
-                                <li class="mb-10"><i class="fa-solid fa-users"></i> 3 o più utenti</li>
-                                <li class="mb-10"><i class="fa-solid fa-folder"></i> Tutto lo spazio di cui ha bisogno il tuo team</li>
-                                <li><i class="fa-solid fa-circle-nodes"></i> Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
+                            <ul class="icon-list">
+                                <li class="mb-10">
+                                    <span><i class="fa-solid fa-users"></i></span>
+                                    <span>3 o più utenti</span>
+                                </li>
+                                <li class="mb-10">
+                                    <span><i class="fa-solid fa-folder"></i></span> 
+                                    <span>Tutto lo spazio di cui ha bisogno il tuo team</span> 
+                                </li>
+                                <li>
+                                    <span><i class="fa-solid fa-circle-nodes"></i></span>
+                                    <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span> 
+                                </li>
                                    
                             </ul>
                         </div>
                         <div class="customer-plan-test">
-                            <button class="button-blue button-special mb-10"> Prova gratis per 30 giorni </button>
+                            <button class="button-blue button-col-85 mb-10"> Prova gratis per 30 giorni </button>
                         </div>
                         <div class="customer-plan-buynow pl-20 mb-50">
                             <span class="border-special">oppure</span> <a href="#">acquista ora</a>
                         </div>
                         <div class="customer-plan-highlights pl-20">
                             <h5 class="mb-10">Punti Salienti del piano</h5>
-                            <ul>
-                                <li><i class="fa-solid fa-check"></i> Nessun limite di spazio per i file</li>
-                                <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
-                                <li><i class="fa-solid fa-check"></i> Risparmio del 50% rispetto alle iscrizioni singole</li>
-                                <li><i class="fa-solid fa-check"></i> Possibilità di inserire nuovi membri del team</li>
-                                <li><i class="fa-solid fa-check"></i> Gestione dei permessi in base ai ruoli</li>
+                            <ul class="icon-list">
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>  
+                                    <span>Nessun limite di spazio per i file</span> 
+                                </li>
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>   
+                                    <span>Cartelle offline su dispositivi mobili</span>
+                                </li>
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span> 
+                                    <span>Risparmio del 50% rispetto alle iscrizioni singole</span>  
+                                </li>
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>
+                                    <span>Possibilità di inserire nuovi membri del team</span>  
+                                </li>
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>    
+                                    <span>Gestione dei permessi in base ai ruoli</span>    
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -157,24 +196,42 @@
                             </ul>
                         </div>
                         <div class="customer-plan-features mb-20 pl-20">
-                            <ul>
-                                <li class="mb-10"><i class="fa-solid fa-user"></i> 10 o più utenti</li>
-                                <li class="mb-10"><i class="fa-solid fa-folder"></i> Soluzioni personalizzabili per la tua azienda</li>
-                                <li><i class="fa-solid fa-circle-nodes"></i> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
+                            <ul class="icon-list">
+                                <li class="mb-10">
+                                    <span><i class="fa-solid fa-user"></i></span>    
+                                    <span>10 o più utenti</span>   
+                                </li>
+                                <li class="mb-10">
+                                    <span><i class="fa-solid fa-folder"></i></span>
+                                    <span>Soluzioni personalizzabili per la tua azienda</span>
+                                </li>
+                                <li>
+                                    <span><i class="fa-solid fa-circle-nodes"></i></span>    
+                                    <span> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span>   
+                                </li>
                             </ul>
                         </div>
                         <div class="customer-plan-test">
-                            <button class="button-blue button-special mb-10"> Contattaci </button>
+                            <button class="button-blue button-col-85 mb-10"> Contattaci </button>
                         </div>
                         <div class="customer-plan-buynow pl-20 mb-50">
                             <span class="border-special">oppure</span> <a href="#">acquista ora</a>
                         </div>
                         <div class="customer-plan-highlights pl-20">
                             <h5 class="mb-10">Punti Salienti del piano</h5>
-                            <ul>
-                                <li><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
-                                <li><i class="fa-solid fa-check"></i> Servizio assistenza 24/h</li>
-                                <li><i class="fa-solid fa-check"></i> Possibilità di personalizzazione totale</li>
+                            <ul class="icon-list">
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>  
+                                    <span>Cartelle offline su dispositivi mobili</span>
+                                </li>
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>    
+                                    <span>Servizio assistenza 24/h</span>   
+                                </li>
+                                <li>
+                                    <span><i class="fa-solid fa-check"></i></span>   
+                                    <span>Possibilità di personalizzazione totale</span>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -299,25 +356,25 @@
                 <div class="row-square">
                     <div class="column-square-left">
                         <div class="card-square-over">
-                            <div class="content-square bg-green">
-                                <img src="img/designit.svg" alt="designit green">
+                            <div class="content-square-lateral bg-green">
+                                <img src="img/designit.svg" alt="designit green" class="img-left">
                             </div>
-                            <div class="content-square bg-bordeaux">
-                                <img src="img/arizona_state_university.svg" alt="arizona state">
+                            <div class="content-square-lateral bg-bordeaux">
+                                <img src="img/arizona_state_university.svg" alt="arizona state" class="img-left">
                             </div> 
                         </div>
                         <div class="card-square-bottom">
-                            <div class="content-square bg-light-blue">
-                                <img id="florida" src="img/university_of_florida.svg" alt="florida">
+                            <div class="content-square-lateral bg-light-blue">
+                                <img id="florida" src="img/university_of_florida.svg" alt="florida" class="img-left">
                             </div>
-                            <div class="content-square bg-bright-red">
-                                <img src="img/topps.svg" alt="topps">
+                            <div class="content-square-lateral bg-bright-red">
+                                <img src="img/topps.svg" alt="topps" class="img-left">
                             </div>
                         </div>
                     </div>
                     <div class="column-square-center">
-                        <div class="card-square pl-20 pt-20">
-                            <div class="card-square-img mb-20">
+                        <div class="card-square-center pl-20 pt-20">
+                            <div class="mb-20">
                                 <img src="img/designit.svg" alt="designit-grey">
                             </div>
                             <div class="border-empty-square mb-20"></div>
@@ -327,19 +384,19 @@
                     </div>
                     <div class="column-square-right">
                         <div class="card-square-over">
-                            <div class="content-square bg-red">
-                                <img src="img/world_bicycle_relief.svg" alt="world-bycicle">
+                            <div class="content-square-lateral bg-red">
+                                <img src="img/world_bicycle_relief.svg" alt="world-bycicle" class="img-right">
                             </div>
-                            <div class="content-square bg-light-light-blue">
-                                <img src="img/hearst_corp.svg" alt="hearst">
+                            <div class="content-square-lateral bg-light-light-blue">
+                                <img src="img/hearst_corp.svg" alt="hearst" class="img-right">
                             </div> 
                         </div>
                         <div class="card-square-bottom">
-                            <div class="content-square bg-dark-blue">
-                                <img src="img/lonely_planet.svg" alt="lonely planet">
+                            <div class="content-square-lateral bg-dark-blue">
+                                <img src="img/lonely_planet.svg" alt="lonely planet" class="img-right">
                             </div>
-                            <div class="content-square bg-yellow">
-                                <img src="img/clear_channel.svg" alt="clear channel">
+                            <div class="content-square-lateral bg-yellow">
+                                <img src="img/clear_channel.svg" alt="clear channel" class="img-right">
                             </div>
                         </div>
                     </div>
@@ -379,7 +436,7 @@
     </main>
 
     <!-- Footer -->
-    <footer>
+    <footer id="footer-go">
         <div class="footer-content large-container">
             <div class="footer-top mb-40">
                 <ul>
