added animation to arrow jumbotron

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
                     <div class="jumbotron-content-description">
                         <p class="mb-20">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente. </p>
                         <button class="button button-blue mb-20">Inizia la tua prova gratuita</button>
-                        <p class="mb-40">Annulla in qualsiasi momento</p>
-                        <a href="#footer-go" class="a-special"><i class="fa-solid fa-arrow-down fa-3x"></i></a>
+                        <p class="mb-20">Annulla in qualsiasi momento</p>
+                        <a href="#footer-go">
+                            <i class="fa-solid fa-arrow-down fa-3x arrow-special"></i>
+                        </a>
                     </div>
                     <div class="jumbotron-content-image">
                         <img src="img/jumbo.png" alt="immagine jumbotron">
@@ -83,6 +85,7 @@
                         <li><span class="circle circle-white"></span> Fatturazione annuale</li>
                     </ul>
                 </div>
+                <!-- Three column -->
                 <div class="vertical-row">
                     <div class="column">
                         <div class="customer-plan mb-20"><i class="fa-solid fa-user"></i> Singolo</div>
@@ -152,7 +155,6 @@
                                     <span><i class="fa-solid fa-circle-nodes"></i></span>
                                     <span>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</span> 
                                 </li>
-                                   
                             </ul>
                         </div>
                         <div class="customer-plan-test">
@@ -236,6 +238,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- Horizontal column -->
                 <div class="horizontal-row">
                     <div class="customer-plan mb-20"><i class="fa-solid fa-building"></i> Team</div>
                     <div class="customer-plan-type-horizontal pl-20 pr-20">
@@ -249,6 +252,7 @@
                         <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
                     </div>
                 </div>
+                <!-- Image with text -->
                 <div class="partner-dropbox">
                     <div class="partner-dropbox-img">
                         <img src="img/partner.png" alt="partner-dropbox">
@@ -419,7 +423,7 @@
                 <div class="section-title section-faq-title">
                     <h3>Domande frequenti</h3>
                 </div>
-                <div class="usual-faq usual-faq-first">
+                <div class="usual-faq">
                     <p class="p-little"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
                     <i class="fa-solid fa-angle-down fa-xs"></i>
                 </div>
