added small corrections

--- a/index.html
+++ b/index.html
@@ -425,16 +425,30 @@
                 </div>
                 <div class="usual-faq">
                     <p class="p-little"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
-                    <i class="fa-solid fa-angle-down fa-xs"></i>
+                    <div>
+                        <i class="fa-solid fa-angle-down fa-xs"></i>
+                        <i class="fa-solid fa-angle-up fa-xs"></i>
+                    </div>
                 </div>
+                <p class="p-hidden">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt nulla fugit aut earum deleniti, magni nemo ut repellat amet praesentium a ratione eum odio autem impedit ipsum porro nisi in.</p>
+                
                 <div class="usual-faq">
                     <p class="p-little"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
-                    <i class="fa-solid fa-angle-down fa-xs"></i>
+                    <div>
+                        <i class="fa-solid fa-angle-down fa-xs"></i>
+                        <i class="fa-solid fa-angle-up fa-xs"></i>
+                    </div>
                 </div>
+                <p class="p-hidden">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt nulla fugit aut earum deleniti, magni nemo ut repellat amet praesentium a ratione eum odio autem impedit ipsum porro nisi in.</p>
+
                 <div class="usual-faq">
                     <p class="p-little"><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong></p>
-                    <i class="fa-solid fa-angle-down fa-xs"></i>
+                    <div>
+                        <i class="fa-solid fa-angle-down fa-xs"></i>
+                        <i class="fa-solid fa-angle-up fa-xs"></i>
+                    </div>
                 </div>
+                <p class="p-hidden">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt nulla fugit aut earum deleniti, magni nemo ut repellat amet praesentium a ratione eum odio autem impedit ipsum porro nisi in.</p>
             </div>
         </section>
     </main>
